<resources>

    <string-array name="specialis_array">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
        <!-- Add more items as needed -->
    </string-array>

    <string name="username">Joko</string>
    <string name="app_name">Codoc</string>
    <string name="doctor_s_name_email_or_phone">Nama dokter, Email atau No.Hp</string>
    <string name="condition_severe_pain">Severe Pain</string>
    <string name="condition_mild_pain">Mild Pain</string>
    <string name="condition_no_pain">No Pain</string>
    <string name="book_an_appointment">Book an appointment</string>
    <string name="please_upload_your_prescription_in_settings_tab">Please upload your prescription in settings tab</string>
    <string name="want_to_book_an_appointment">Want to book an appointment\?</string>
    <string name="book">Book</string>
    <string name="appointment_summary">Appointment Summary</string>
    <string name="successfully_booked_an_appointment">Successfully booked an appointment</string>
    <string name="back_to_home">Back to Home</string>
    <string name="please_fill_the_form_below">Please fill the form below</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Time</string>
    <string name="select_penyakit">Select Penyakit</string>
    <string name="select_spesialis">Select Specialis</string>
    <string name="confirm_your_appointment">Confirm your appointment</string>
    <string name="note_you_must_enter_the_correct_information_entering_wrong_information_might_lead_to_cancellation_of_your_future_appointments">Note: You must enter the correct information. Entering wrong information might lead to cancellation of your future appointments.</string>
    <string name="mon_fri_09_00_21_00">09:00 - 17:00</string>
    <string name="working_hours">Jam Kerja</string>
    <string name="your_appointment">Your Appointment</string>
    <string name="patient_queue">Patient Queue</string>
    <string name="settings">Settings</string>
    <string name="configure_changes">Configure changes</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="add_data">Add data</string>
    <string name="biological_reference_80_120">Biological Reference: 80–120</string>
    <string name="min_loading_max_loading">Min: Loading, Max: Loading</string>
    <string name="sugar_fasting">Sugar Fasting</string>
    <string name="biological_reference_70_100">Biological Reference: 70–100</string>
    <string name="sugar_pp">Sugar PP</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="rate_user">Rate user</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="dispute_a_rating">Dispute a Rating</string>
    <string name="report_any_unfair_or_inaccurate_ratings_you_have_received_we_will_review_your_report_and_take_appropriate_action">Report any unfair or inaccurate ratings you have received. We will review your report and take appropriate action.</string>
    <string name="enter_your_title_here">Enter your title here \*</string>
    <string name="reason_for_dispute">Reason for Dispute \*</string>
    <string name="submit_dispute">Submit Dispute</string>
    <string name="enter_your_comment_here_optional">Enter your comment here (optional)</string>
    <string name="create_or_edit_your_upi">Create or edit your UPI</string>
    <string name="upi_manager">UPI Manager</string>
    <string name="add_prescription">Add Prescription</string>
    <string name="select_prescription">Select Prescription</string>
    <string name="upload_file">Upload file</string>
    <string name="file_title">File title</string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile">Profile</string>
    <string name="optional">Optional</string>
    <string name="search">Search</string>
    <string name="register">Register</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="password_hint">***************</string>
    <string name="phone_number_hint">+91 9876543210</string>
    <string name="email_hint">johndoe123@gmail.com</string>
    <string name="email">Email</string>
    <string name="name_hint">John Doe</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="next_step">Next Step</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_text">Login</string>
    <string name="profile_details">Profile Details</string>
    <string name="address_hint">42/C Devanagari, Bangalore - XXXXXX</string>
    <string name="is_doctor_hint">No, I\'m not a Doctor</string>
    <string name="are_you_a_doctor">Are you a Doctor?</string>
    <string name="address">Alamat</string>
    <string name="specialization_hint">Eg. Cardiologist</string>
    <string name="create_account">Create Account</string>
    <string name="your_database_was_created">Your Database was Created</string>
    <string name="account_creation_failed">Account Creation Failed</string>
    <string name="database_creation_failed">Database Creation Failed</string>
    <string name="account_created_successfully">Account Created Successfully</string>
    <string name="please_select_your_profession">Please select your profession</string>
    <string name="please_select_your_specialization">Please select your Specialization</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string name="login">Login</string>
    <string name="enter_your_details_to_get_started">Enter your details to get started</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="logged_in">Logged in</string>
    <string name="send_reset_mail">Send Reset Mail</string>
    <string name="enter_your_registered_email_address">Enter your registered email address</string>
    <string name="upload_prescription">Upload Prescription</string>
    <string name="upi_qr">UPI QR</string>
    <string name="about_us">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="need_help">Need help?</string>
    <string name="logout">Logout</string>
    <string name="update_profile">Update Profile</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_age">Invalid Age</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="invalid_address">Invalid Address</string>
    <string name="customize_your_profile">Customize your profile</string>
    <string name="profile_updated_successfully">Profile updated Successfully!</string>
    <string name="failed_to_update_profile">Failed to update Profile!</string>
    <string name="no_address_found">Alamat tidak ditemukan</string>
    <string name="welcome_to_medify">Welcome to Medify</string>
    <string name="description">Medify is an Android application that not only solves the issue of the patients as users, but also solves the problems of the doctors as well.\nThe app offers users to book an appointment with the doctor that are registered in the app already.\nThe waiting queue is sorted according to the priority and not ‘First Come First Serve’ which allows all the patients to get equal priority.\nUsers can monitor their health data which is shown in a chart of last 5 data from their report.</string>
    <string name="needHelpDescription">Medify is an Android application that not only solves the issue of the patients as users, but also solves the problems of the doctors as well.\nBook an appointment with ease by answering some questions regarding your health issue.\nDo not need the carry the previous prescription to doctor just upload it here and when you book appointment the doctor can easily see your previous prescription.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>